--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-@import url("singolo1.css");
-
 @font-face {
   font-style: normal;
   font-weight: normal;
@@ -50,46 +48,114 @@ body {
 .section {
   display: flex;
   flex-direction: column;
-  padding: 70px 40px 0;
+  box-sizing: border-box;
+  padding: 0 40px;
 
   color: #666d89;
 
   border-bottom: 6px solid;
 }
 
-.section_portfolio {
+.header {
+  flex-direction: row;
+  align-items: center;
+  height: 95px;
+
+  color: white;
+
   background-color: #2d303a;
-  border-color: #323746;
+  border-bottom: 6px solid #323746;
+}
+
+.header__logo {
+  font-weight: 700;
+  font-size: 1.57rem;
+  text-align: left;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: -0.59px;
+}
+
+.header__logo::after {
+  content: "*";
+
+  font-weight: 900;
+  color: #f06c64;
+}
+
+.header__navigation {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  margin-left: auto;
+  padding-top: 10px;
+
+  font-weight: 900;
+  font-size: 0.75rem;
+}
+
+
+.header__navigation__item {
+  display: inline-block;
+  margin: 0;
+
+  font-size: 0.75rem;
+  text-transform: uppercase;
+  letter-spacing: -0.255px;
+}
+
+.header__navigation__item:not(:first-child)::before {
+  content: "·";
+
+  display: inline-block;
+  padding: 0 13px 0 12px;
+
+  color: #494e62;
+  text-transform: uppercase;
+}
+
+.header__navigation__item > a {
+  color: white;
+  text-decoration: none;
+}
+
+.header__navigation__item > a:hover {
+  color: #f06c64;
+}
+
+
+.section__header {
+  padding-top: 65px;
 }
 
 .section__header__title {
   margin: 0;
 
   font-weight: 900;
-  font-size: 30px;
-  line-height: 18px;
+  font-size: 1.87rem;
+  line-height: 1.8rem;
   text-align: left;
   letter-spacing: 0.013rem;
 }
 
 .section__header__description {
-  padding-top: 27px;
+  padding-top: 20px;
 
   font-weight: normal;
-  font-size: 18px;
-  line-height: 30px;
+  font-size: 1.125rem;
+  line-height: 1.9rem;
   text-align: justify;
 }
 
 .section__content {
   display: flex;
-  padding-top: 44px;
+  align-items: center;
 }
 
 .layout-4-column {
   display: flex;
-  flex-wrap: wrap;
   flex-grow: 1;
+  flex-wrap: wrap;
   justify-content: space-between;
 }
 
@@ -99,18 +165,269 @@ body {
 
 .layout-3-column {
   display: flex;
-  flex-wrap: nowrap;
   flex-grow: 1;
+  flex-wrap: wrap;
   justify-content: space-between;
+  align-content: flex-start;
 }
 
 .layout-3-column > * {
   flex-basis: 32%;
 }
 
+.section_slider {
+  flex-direction: row;
+  height: 600px;
+
+  background-color: #f06c64;
+  border-bottom: 6px solid #ea676b;
+}
+
+.slider {
+  flex-basis: 100%;
+
+  border-right: 1px solid #f06c64;
+  border-left: 2px solid #f06c64;
+}
+
+.slider__control {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.slider__control_left {
+  width: 16px;
+  height: 30px;
+
+  background-image: url("assets/chev_left.svg");
+  background-repeat: repeat-x;
+  background-position-y: center;
+
+  transition: background-position-x 0s;
+}
+
+.slider__control_left:hover {
+  background-position-x: -16px;
+
+  transition: background-position-x 1s;
+}
+
+.slider__control_right {
+  width: 16px;
+  height: 30px;
+
+  background-image: url("assets/chev_right.svg");
+  background-repeat: repeat-x;
+  background-position: center;
+
+  transition: background-position-x 0s;
+}
+
+.slider__control_right > a:hover {
+  background-position-x: 16px;
+
+  transition: background-position-x 1s;
+}
+
+.slider__content {
+  position: relative;
+
+  flex-basis: 100%;
+}
+
+.iphone__frame {
+  position: absolute;
+  top: 0;
+  left: -1px;
+  z-index: 20;
+
+  width: 217px;
+  height: 462px;
+  margin: 0;
+
+  background-color: transparent;
+  background-image: url("assets/iPhone.svg");
+  background-position-x: 0;
+  background-position-y: 0;
+  border-radius: 27px;
+}
+
+.iphone__shadow {
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  z-index: 10;
+
+  width: 240px;
+  height: 483px;
+  margin-bottom: 0;
+
+  background-color: transparent;
+  background-image: url("assets/Shadow.svg");
+  background-repeat: no-repeat;
+}
+
+.iphone-vertical {
+  position: absolute;
+  top: -245px;
+  left: 54px;
+}
+
+.iphone__screen {
+  position: absolute;
+  top: 62.5px;
+  left: 11.8px;
+  z-index: 30;
+
+  box-sizing: border-box;
+  width: 194px;
+  height: 339px;
+
+  border: 3px solid #c5c5c5;
+  border-radius: 3px;
+}
+
+.iphone__screen_yellow {
+  background-image: url("assets/Screen1.svg");
+  background-repeat: no-repeat;
+  background-position-x: -14px;
+  background-position-y: -134.6px;
+}
+
+.iphone-horizontal {
+  position: absolute;
+  top: -124.5px;
+  left: 827px;
+
+  transform: rotate(90deg);
+}
+
+.iphone-horizontal > .iphone__shadow {
+  top: -26px;
+
+  transform: scaleX(-1);
+}
+
+.iphone-horizontal > .iphone__screen {
+  top: 135px;
+  left: -60.4px;
+
+  width: 339px;
+  height: 194px;
+
+  transform: rotate(-90deg);
+}
+
+.iphone__screen_blue {
+  background-image: url("assets/Screen2.svg");
+  background-repeat: no-repeat;
+  background-position-x: -125.5px;
+  background-position-y: -119.4px;
+}
+
+.section_services {
+  height: 500px;
+
+  background-color: #f2f2f2;
+  border-bottom: 6px solid white;
+}
+
+.service-info {
+  display: flex;
+  flex-direction: row;
+  padding-top: 21px;
+}
+
+.service-info__image {
+  width: 75px;
+  height: 55px;
+  margin-right: 20px;
+  margin-left: 1px;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  border: 2px solid #767e9e;
+  border-radius: 29px;
+}
+
+.service-info__image_pen {
+  background-image: url("assets/pen.svg");
+  background-position-x: 11px;
+  background-position-y: 11px;
+}
+
+.service-info__image_phone {
+  background-image: url("assets/phone.svg");
+  background-position-x: 15px;
+}
+
+.service-info__image_bulb {
+  background-image: url("assets/bulb.svg");
+  background-position-x: 15px;
+  background-position-y: 10px;
+}
+
+.service-info__image_bubble {
+  margin-left: 0;
+
+  background-image: url("assets/bubble.svg");
+  background-position-x: 11px;
+  background-position-y: 13px;
+}
+
+.service-info__image_heart {
+  margin-left: 0;
+
+  background-image: url("assets/heart.svg");
+  background-position-x: 10px;
+  background-position-y: 12px;
+}
+
+.service-info__image_star {
+  margin-left: 0;
+
+  background-image: url("assets/star.svg");
+  background-position-x: 10px;
+  background-position-y: 11px;
+}
+
+
+.info-block {
+  display: flex;
+  flex-basis: 100%;
+  flex-direction: column;
+}
+
+.info-block__header {
+  font-weight: 900;
+  font-size: 1.2rem;
+  line-height: 0.9rem;
+  color: #767e9e;
+  text-transform: capitalize;
+  letter-spacing: -0.55px;
+}
+
+.info-block__description {
+  padding: 12px 0;
+  overflow: hidden;
+
+  font-weight: 900;
+  font-size: 0.8rem;
+  line-height: 1.37rem;
+  text-align: justify;
+  color: #767e9e;
+  letter-spacing: -0.03rem;
+  text-overflow: ellipsis;
+}
+
+.section_portfolio {
+  background-color: #2d303a;
+  border-color: #323746;
+}
+
 .gallery {
-  flex-wrap: wrap;
-  justify-content: space-between;
+  flex-direction: column;
   height: 620px;
   padding-top: 8.5px;
   padding-bottom: 90px;
@@ -118,24 +435,23 @@ body {
 
 .gallery__filter {
   display: flex;
-  flex-basis: 100%;
+  align-self: flex-start;
+  padding-top: 1.5px;
   padding-bottom: 9px;
-  padding-top: 1px;
 }
 
 .gallery__filter__button {
   height: 22px;
   margin: 0 9px 0 1px;
-  padding: 0 6px 0;
+  padding: 0 6px;
 
   font-weight: bold;
-  font-size: 12px;
-  line-height: 18px;
+  font-size: 0.76rem;
   font-family: "Lato", sans-serif;
   text-align: center;
   color: #666d89;
   text-transform: capitalize;
-  letter-spacing: -0.007rem;
+  letter-spacing: -0.01rem;
 
   background-color: #2d303a;
   border: 1px solid #666d89;
@@ -166,8 +482,11 @@ body {
   border: 0;
 }
 
+.gallery__content {
+  align-self: stretch;
+}
+
 .gallery__item {
-  /* flex-basis: 220px; */
   height: 187px;
   padding: 10px 0;
 }
@@ -256,7 +575,7 @@ body {
   background-clip: content-box;
 }
 
-/* hide all gallery__items after 12 */
+/* hide all gallery__items after 12 + filter item */
 .gallery__item:nth-child(n+14) {
   display: none;
   width: 0;
@@ -267,27 +586,24 @@ body {
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-between;
-  padding-bottom: 48px;
+  padding-bottom: 49px;
 
   background-color: #f2f2f2;
   border-color: white;
 }
 
-/* .about {
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-} */
+.about {
+  padding: 45px 0 0;
+}
 
 .about__item {
   display: flex;
   flex-direction: column;
-  /* padding: 44px 0 0; */
 }
 
 .about__item__photo {
-  height: 300px;
   width: 300px;
+  height: 300px;
 }
 
 .about__item__photo_person1 {
@@ -307,30 +623,31 @@ body {
 
 .about__item__name {
   max-width: 300px;
-  padding-top: 17px;
+  padding-top: 11.5px;
   overflow: hidden;
 
   font-weight: bold;
-  font-size: 18px;
-  line-height: 18px;
+  font-size: 1.125rem;
+  line-height: 1.8rem;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
 
 .about__item__summary {
-  padding-top: 10px;
+  padding-top: 6px;
 
   font-weight: bold;
-  font-size: 12px;
-  line-height: 22px;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
   text-align: justify;
-  letter-spacing: -0.012rem;
+  letter-spacing: -0.17px;
 }
 
 .about__item__contact {
   display: flex;
   height: 50px;
-  padding-top: 23px;
+  padding-top: 25px;
+  padding-left: 1px;
 }
 
 .social-contact__item {
@@ -378,13 +695,12 @@ body {
   border-color: #ea676b;
 }
 
-
 .get-a-quote-form {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  /*height: 364px;*/
   min-width: 619px;
+  padding-top: 44px;
 }
 
 .get-a-quote-form__field {
@@ -393,28 +709,10 @@ body {
   padding: 0 15px 2px;
 
   font-weight: bold;
-  font-size: 12px;
+  font-size: 0.675rem;
   font-family: "Lato", sans-serif;
   color: #f0d8d9;
-  letter-spacing: -0.01rem;
-
-  background-color: #d6564f;
-  border: none;
-  border-radius: 4px;
-  outline: none;
-}
-
-
-.get-a-quote-form__text-input {
-  height: 36px;
-  padding: 1px 15px;
-
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 22px;
-  font-family: "Lato", sans-serif;
-  color: #f0d8d9;
-  letter-spacing: -0.01rem;
+  letter-spacing: 0.03rem;
 
   background-color: #d6564f;
   border: none;
@@ -429,9 +727,8 @@ body {
 }
 
 .get-a-quote-form__field::placeholder {
-  padding-top: 10px;
+  padding-top: 12px;
 
-  font-size: inherit;
   color: #f48c8f;
 }
 
@@ -440,8 +737,11 @@ body {
 }
 
 .get-a-quote-form__field_textarea {
-  height: 190px;
-  padding-top: 10px;
+  height: 189px;
+  padding-top: 11px;
+
+  letter-spacing: 0.4px;
+
   resize: none;
 }
 
@@ -468,21 +768,23 @@ body {
 .contact-info {
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
+  padding-top: 42px;
   padding-left: 21px;
 
-  font-weight: bold;
+  font-weight: 900;
   color: #f0d8d9;
 }
 
 .contact-info__header {
-  font-size: 18px;
+  font-size: 1.14rem;
 }
 
 .contact-info__description {
   padding-top: 8px;
 
-  font-size: 12px;
-  line-height: 22px;
+  font-size: 0.75rem;
+  line-height: 1.39rem;
   text-align: justify;
   letter-spacing: -0.01rem;
 }
@@ -490,15 +792,18 @@ body {
 .contact-info__footer {
   display: flex;
   flex-direction: column;
-  padding-top: 21px;
+  padding-top: 20px;
 
-  font-size: 12px;
-  line-height: 22px;
+  font-size: 0.75rem;
+  line-height: 1.35rem;
   color: #f0d8d9;
 }
 
 .contact-info__footer__item {
+  position: relative;
+
   display: block;
+  margin-left: 23px;
 
   color: #f0d8d9;
   text-decoration: none;
@@ -506,22 +811,21 @@ body {
 
 .contact-info__footer__item_address::before {
   content: url("assets/location.svg");
-
-  margin-right: 13px;
-  padding-left: 3px;
+  position: absolute;
+  left: -20px;
 }
 
 .contact-info__footer__item_phone::before {
   content: url("assets/phone2.svg");
-
-  margin-right: 11px;
-  padding-left: 1px;
+  position: absolute;
+  left: -22px;
 }
 
 .contact-info__footer__item_email::before {
   content: url("assets/letter.svg");
-
-  margin-right: 10px;
+  position: absolute;
+  top: 1px;
+  left: -23px;
 }
 
 .footer {
@@ -530,7 +834,7 @@ body {
   height: 77px;
 
   font-weight: bold;
-  font-size: 12px;
+  font-size: 0.75rem;
   color: #666d89;
 
   background-color: #2d303a;
@@ -546,4 +850,62 @@ body {
   display: flex;
   margin-left: auto;
   padding-right: 32px;
+}
+
+
+/* Adjustments for perfect pixel */
+html {
+  font-size: 16px;
+}
+
+.slider > .slider__control {
+  margin-top: -4px;
+}
+
+.section_services .section__header {
+  padding-bottom: 26px;
+}
+
+.section_services .section__header__title {
+  margin-top: -1px;
+
+  letter-spacing: 0.004rem;
+}
+
+.service-info:nth-child(3),
+.service-info:nth-child(6) {
+  flex-basis: 300px;
+}
+
+.service-info:nth-child(3) .info-block__header {
+  padding-left: 2px;
+}
+
+.service-info:nth-child(6) .info-block__header {
+  padding-left: 2px;
+
+  letter-spacing: -0.03rem;
+}
+
+.gallery__filter__button:last-child {
+  margin-left: 0;
+
+  letter-spacing: -0.03rem;
+}
+
+.about__item__summary > span {
+  letter-spacing: -0.007rem;
+}
+
+.about__item:nth-child(3) .about__item__name {
+  letter-spacing: 0.005rem;
+}
+
+.section_get-a-quote h2 {
+  margin-top: -1px;
+}
+
+.contact-info__footer__item:nth-child(1),
+.contact-info__footer__item:nth-child(3) {
+  letter-spacing: -0.005rem;
 }
