--- a/style.css
+++ b/style.css
@@ -222,7 +222,8 @@ body {
 
 .slider__control {
   position: absolute;
-  z-index: 30;
+  z-index: 50;
+
   cursor: pointer;
 }
 
@@ -280,13 +281,11 @@ body {
 
   display: inline-block;
   box-sizing: border-box;
-  width: 0;
+  width: 1020px;
   height: 100%;
 }
 
 .slide_1 {
-  left: -1020px;
-
   background-color: #f06c64;
   border-bottom: 6px solid #ea676b;
 }
@@ -296,58 +295,14 @@ body {
   border-bottom: 6px solid #759bfc;
 }
 
-.slide_move-to-left {
-  left: -1020px;
-  z-index: 20;
-
-  flex-basis: 0;
-  width: 1020px;
-
-  transform: translateX(1020px);
-
-  transition: transform 1s ease-out;
-}
-
-.slide_move-to-right {
-  left: 1020px;
-  z-index: 20;
-
-  flex-basis: 0;
-  width: 1020px;
-
-  transform: translateX(-1020px);
-
-  transition: transform 1s ease-out;
-}
-
-.slide_transition {
-  z-index: 50;
-
-  flex-basis: 100%;
-
-  transition: transform 2s linear;
-}
-
 .slide_active {
-  left: 0;
-  z-index: 10;
-
-  width: 1020px;
-}
-
-.slide_hide-right {
-  margin-left: 1020px;
-}
-
-.slide_hide-left {
-  z-index: -1;
-
-  flex-basis: 0;
+  z-index: 40;
 }
 
 .iphone {
   width: 240px;
   height: 483px;
+
   user-select: none;
 }
 
@@ -681,6 +636,8 @@ body {
   border-radius: 5px;
   outline: none;
   cursor: pointer;
+
+  user-select: none;
 }
 
 .gallery__filter__button_active {
@@ -720,9 +677,11 @@ body {
   background-clip: content-box;
   border: 5px solid transparent;
   border-radius: 5px;
+  cursor: pointer;
 
   transition: border-color 0.2s ease-out;
-  cursor: pointer;
+
+  user-select: none;
 }
 
 .gallery__item_active {
@@ -1097,5 +1056,6 @@ body {
 /* Adjustments for perfect pixel */
 html {
   font-size: 16px;
+
   scroll-behavior: smooth;
 }
